# auto-down

./: .gitignore
autodown/: package.json  pnpm-lock.yaml  tsconfig.base.json
autodown/.changeset/: quiet-walls-try.md
autodown/demo/: index.html  package.json  playwright.config.ts  vite.config.js
autodown/demo/e2e/: check-heading.spec.ts  check-padding.spec.ts  screenshot.spec.ts  scroll-sync.spec.ts
autodown/demo/src/: App.vue  main.ts
autodown/demo/src/components/: CustomScrollbar.vue
autodown/docs/: 01-vision.md  03-architecture.md  05-indexing-research.md  06-roadmap.md  07-jade-garden-mvp-design.md  README.md  sync-and-block-alignment.md
autodown/plans/: 002-code-block-language-picker.md  003-synchronized-custom-scrollbar.md  005-extended-block-components.md
docs/: 02-ad-format.md  04-auto-ai-integration.md
jade-garden/: .gitignore  README.md  pac.at
jade-garden/back/: api.at  db.at  pac.at  service.at
jade-garden/back/server/: Cargo.toml
jade-garden/back/server/src/: files.rs  links.rs  main.rs  state.rs  wiki.rs  workspace.rs
jade-garden/back/server/test-wiki/wiki/: README.ad  Topic.ad
jade-garden/front/: app.at  e2e-multi-tab.cjs  index.html  pac.at  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts
jade-garden/front/src/: App.vue  main.ts
plans/: 001-i18n-icon-decoupling-playground-changeset.md  004-code-block-header-polish.md  006-jade-garden-mvp-implementation.md  007-jade-garden-ui-redesign.md  008-jade-garden-graph-view.md
tmp/wiki-demo/wiki/: CAP 定理.ad  Hello World.ad  Projects.ad  Tasks.ad  index.ad
(+36 files in other folders)
